feat(grid): add grid features

--- a/test/integration/test-2/CMakeLists.txt
+++ b/test/integration/test-2/CMakeLists.txt
@@ -14,8 +14,9 @@ set(XIOUDOWN_SOURCE_DIR "${XIOUDOWN_ENGINE_DIR}/src")
 set(XIOUDOWN_SOURCES
     ${XIOUDOWN_SOURCE_DIR}/game_io.cpp
     ${XIOUDOWN_SOURCE_DIR}/game_window.cpp
-    ${XIOUDOWN_SOURCE_DIR}/utils.cpp
+    ${XIOUDOWN_SOURCE_DIR}/grid.cpp
     ${XIOUDOWN_SOURCE_DIR}/polygon.cpp
+    ${XIOUDOWN_SOURCE_DIR}/utils.cpp
     ${XIOUDOWN_SOURCE_DIR}/xioudown.cpp
 )
 
