--- a/test/integration/test-2/bin/test.vcxproj
+++ b/test/integration/test-2/bin/test.vcxproj
@@ -315,8 +315,9 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
   <ItemGroup>
     <ClCompile Include="C:\Users\Micha\Documents\Xioudown\test\integration\test-2\lib\Xioudown\src\game_io.cpp" />
     <ClCompile Include="C:\Users\Micha\Documents\Xioudown\test\integration\test-2\lib\Xioudown\src\game_window.cpp" />
-    <ClCompile Include="C:\Users\Micha\Documents\Xioudown\test\integration\test-2\lib\Xioudown\src\utils.cpp" />
+    <ClCompile Include="C:\Users\Micha\Documents\Xioudown\test\integration\test-2\lib\Xioudown\src\grid.cpp" />
     <ClCompile Include="C:\Users\Micha\Documents\Xioudown\test\integration\test-2\lib\Xioudown\src\polygon.cpp" />
+    <ClCompile Include="C:\Users\Micha\Documents\Xioudown\test\integration\test-2\lib\Xioudown\src\utils.cpp" />
     <ClCompile Include="C:\Users\Micha\Documents\Xioudown\test\integration\test-2\lib\Xioudown\src\xioudown.cpp" />
     <ClCompile Include="C:\Users\Micha\Documents\Xioudown\test\integration\test-2\src\aspects.cpp" />
     <ClCompile Include="C:\Users\Micha\Documents\Xioudown\test\integration\test-2\main.cpp" />
