--- a/test/integration/test-2/bin/test.vcxproj.filters
+++ b/test/integration/test-2/bin/test.vcxproj.filters
@@ -7,10 +7,13 @@
     <ClCompile Include="C:\Users\Micha\Documents\Xioudown\test\integration\test-2\lib\Xioudown\src\game_window.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\Micha\Documents\Xioudown\test\integration\test-2\lib\Xioudown\src\utils.cpp">
+    <ClCompile Include="C:\Users\Micha\Documents\Xioudown\test\integration\test-2\lib\Xioudown\src\grid.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="C:\Users\Micha\Documents\Xioudown\test\integration\test-2\lib\Xioudown\src\polygon.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="C:\Users\Micha\Documents\Xioudown\test\integration\test-2\lib\Xioudown\src\utils.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="C:\Users\Micha\Documents\Xioudown\test\integration\test-2\lib\Xioudown\src\xioudown.cpp">
