--- a/test/integration/test-2/bin/test.vcxproj
+++ b/test/integration/test-2/bin/test.vcxproj
@@ -114,7 +114,7 @@
       <ProxyFileName>%(Filename)_p.c</ProxyFileName>
     </Midl>
     <Link>
-      <AdditionalDependencies>-lmingw32;..\lib\Xioudown\lib\sdl_dev_lib\lib\libSDL2main.a;..\lib\Xioudown\lib\sdl_dev_lib\lib\libSDL2_ttf.a;..\lib\Xioudown\lib\sdl_dev_lib\lib\libSDL2_image.a;..\lib\Xioudown\lib\sdl_dev_lib\lib\libSDL2.dll.a;-mwindows;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;comdlg32.lib;advapi32.lib</AdditionalDependencies>
+      <AdditionalDependencies>..\lib\Xioudown\lib\sdl_dev_lib\lib\libSDL2main.a;..\lib\Xioudown\lib\sdl_dev_lib\lib\libSDL2_ttf.a;..\lib\Xioudown\lib\sdl_dev_lib\lib\libSDL2_image.a;..\lib\Xioudown\lib\sdl_dev_lib\lib\libSDL2.dll.a;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;comdlg32.lib;advapi32.lib</AdditionalDependencies>
       <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalOptions>%(AdditionalOptions) /machine:x64</AdditionalOptions>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -157,7 +157,7 @@
       <ProxyFileName>%(Filename)_p.c</ProxyFileName>
     </Midl>
     <Link>
-      <AdditionalDependencies>-lmingw32;..\lib\Xioudown\lib\sdl_dev_lib\lib\libSDL2main.a;..\lib\Xioudown\lib\sdl_dev_lib\lib\libSDL2_ttf.a;..\lib\Xioudown\lib\sdl_dev_lib\lib\libSDL2_image.a;..\lib\Xioudown\lib\sdl_dev_lib\lib\libSDL2.dll.a;-mwindows;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;comdlg32.lib;advapi32.lib</AdditionalDependencies>
+      <AdditionalDependencies>..\lib\Xioudown\lib\sdl_dev_lib\lib\libSDL2main.a;..\lib\Xioudown\lib\sdl_dev_lib\lib\libSDL2_ttf.a;..\lib\Xioudown\lib\sdl_dev_lib\lib\libSDL2_image.a;..\lib\Xioudown\lib\sdl_dev_lib\lib\libSDL2.dll.a;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;comdlg32.lib;advapi32.lib</AdditionalDependencies>
       <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalOptions>%(AdditionalOptions) /machine:x64</AdditionalOptions>
       <GenerateDebugInformation>false</GenerateDebugInformation>
@@ -200,7 +200,7 @@
       <ProxyFileName>%(Filename)_p.c</ProxyFileName>
     </Midl>
     <Link>
-      <AdditionalDependencies>-lmingw32;..\lib\Xioudown\lib\sdl_dev_lib\lib\libSDL2main.a;..\lib\Xioudown\lib\sdl_dev_lib\lib\libSDL2_ttf.a;..\lib\Xioudown\lib\sdl_dev_lib\lib\libSDL2_image.a;..\lib\Xioudown\lib\sdl_dev_lib\lib\libSDL2.dll.a;-mwindows;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;comdlg32.lib;advapi32.lib</AdditionalDependencies>
+      <AdditionalDependencies>..\lib\Xioudown\lib\sdl_dev_lib\lib\libSDL2main.a;..\lib\Xioudown\lib\sdl_dev_lib\lib\libSDL2_ttf.a;..\lib\Xioudown\lib\sdl_dev_lib\lib\libSDL2_image.a;..\lib\Xioudown\lib\sdl_dev_lib\lib\libSDL2.dll.a;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;comdlg32.lib;advapi32.lib</AdditionalDependencies>
       <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalOptions>%(AdditionalOptions) /machine:x64</AdditionalOptions>
       <GenerateDebugInformation>false</GenerateDebugInformation>
@@ -242,7 +242,7 @@
       <ProxyFileName>%(Filename)_p.c</ProxyFileName>
     </Midl>
     <Link>
-      <AdditionalDependencies>-lmingw32;..\lib\Xioudown\lib\sdl_dev_lib\lib\libSDL2main.a;..\lib\Xioudown\lib\sdl_dev_lib\lib\libSDL2_ttf.a;..\lib\Xioudown\lib\sdl_dev_lib\lib\libSDL2_image.a;..\lib\Xioudown\lib\sdl_dev_lib\lib\libSDL2.dll.a;-mwindows;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;comdlg32.lib;advapi32.lib</AdditionalDependencies>
+      <AdditionalDependencies>..\lib\Xioudown\lib\sdl_dev_lib\lib\libSDL2main.a;..\lib\Xioudown\lib\sdl_dev_lib\lib\libSDL2_ttf.a;..\lib\Xioudown\lib\sdl_dev_lib\lib\libSDL2_image.a;..\lib\Xioudown\lib\sdl_dev_lib\lib\libSDL2.dll.a;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;comdlg32.lib;advapi32.lib</AdditionalDependencies>
       <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalOptions>%(AdditionalOptions) /machine:x64</AdditionalOptions>
       <GenerateDebugInformation>true</GenerateDebugInformation>
